--- a/.zshrc.vm
+++ b/.zshrc.vm
@@ -1,5 +1,5 @@
 # Path to your oh-my-zsh installation.
-export ZSH=$HOME/.oh-my-zsh
+  export ZSH=/Users/vincent/.oh-my-zsh
 
 # Set name of the theme to load.
 # Look in ~/.oh-my-zsh/themes/
@@ -53,7 +53,7 @@ plugins=(git)
 
 # User configuration
 
-export PATH=$HOME/bin:/usr/local/bin:$PATH
+  export PATH="/usr/local/bin:/opt/local/bin:/opt/local/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Library/TeX/texbin"
 # export MANPATH="/usr/local/man:$MANPATH"
 
 source $ZSH/oh-my-zsh.sh
@@ -83,6 +83,9 @@ source $ZSH/oh-my-zsh.sh
 # alias zshconfig="mate ~/.zshrc"
 # alias ohmyzsh="mate ~/.oh-my-zsh"
 
+# Sublime
+alias subl="open -a /Applications/Sublime\ Text.app"
+
 # Git timesavers
 alias gita='git add '
 alias gitac='git commit -am'
@@ -103,6 +106,14 @@ alias .4='cd ../../../../'                  # Go back 4 directory levels
 alias .5='cd ../../../../../'               # Go back 5 directory levels
 alias .6='cd ../../../../../../'            # Go back 6 directory levels	
 
+alias asdfpwd='echo "Switched to directory: "; pwd'
+
 # Fast directory moving
+alias sddir="cd ~/Documents/UCSD; asdfpwd"
+alias tsmdir="cd ~/Documents/TSM; asdfpwd"
+alias downdir="cd ~/Downloads; asdfpwd"
+alias docdir="cd ~/Documents; asdfpwd"
+alias dropdir="cd ~/Dropbox; asdfpwd"
+alias gitdir="cd ~/Documents/Github; asdfpwd"
 alias zshrc="vim ~/.zshrc"
 alias v="vim"
